fix overflowing gradient background on banner CTA

--- a/src/components/BackgroundGradient/index.module.scss
+++ b/src/components/BackgroundGradient/index.module.scss
@@ -8,7 +8,6 @@
 }
 
 .backgroundGradientWrapper {
-  position: fixed;
   z-index: 0;
   top: 0;
   right: 0;
