--- a/src/components/Hero/HomeNew/index.module.scss
+++ b/src/components/Hero/HomeNew/index.module.scss
@@ -179,12 +179,16 @@
   }
 }
 
-.backgroundGradient::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+.backgroundGradient {
+  position: fixed;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
 }
